# odin

./: README.md  pyproject.toml
src/: hash.py  logs.py  nodes.py  serialstuff.py
src/ocli/: __init__.py  cli.py
src/odin/: __init__.py  odin.py
src/raven/: __init__.py  raven.py
